# PINN-HJB

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  utils.py
analysis/: market_data_analysis.py
backtest/: plot_pi_strategy.py  wealth_backtest.py
backtest/scripts/: _calc_params_seed72.py  _check_stock_start.py  _scan_best_seed.py
data/: data_loder.py  中证500.csv  创业50.csv  沪深300.csv
data/raw/: stock_ga_parameters_new.csv
docs/: formula.txt
hjb_solver/classic/: hjb_solver.py  hjb_solver_implicit.py  plot_hjb_results.py
hjb_solver/modular/: README.py  hjb_solver_base.py  hjb_solver_crra.py  hjb_solver_log.py  hjb_solver_stock.py  pinn_hjb_stock.py
logs/: loss_history.csv
model/: PINN.py  data.py  loss.py  train.py
models/: pinn_model.pth
pinn_model/: .gitattributes  compare_models.py  compare_pi_curve.py  config.yaml  main.py  paper_gpu.py  plot_model_results.py  plot_v_contour.py  requirements.txt
pinn_model/data/: data.py
pinn_model/data/raw/: stock_ga_parameters_seed72.csv
pinn_model/model/: loss.py  train.py
