[project]
name = "pinn-hjb"
version = "0.1.0"
description = "基于 PINN 的 HJB 方程求解与量化策略回测系统"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
]

[tool.uv]
dev-dependencies = [
    "ipykernel",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
